--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Global */
+/* Global common (template) */
 
 * {
   box-sizing: border-box;
@@ -16,16 +16,8 @@ body {
   align-items: center;
   height: 100%;
 
-  min-width: 320px;
   margin: 0;
   padding: 0;
-
-  font-family: 'Roboto', Arial, sans-serif;
-  font-size: 18px;
-  line-height: 25px;
-  
-  color: #1f2937;
-  background-color: #f9faf8;
 }
 
 main {
@@ -60,7 +52,7 @@ button {
     cursor: pointer;
 }
 
-/* Basic */
+/* Basic common (template) */
 
 .list-default {
     list-style: none;
@@ -83,20 +75,118 @@ button {
 
 .btn {
     display: inline-block;
-    padding: 10px 40px;
-    min-width: 140px;
 
     font: inherit;
-    font-family: 'Cuprum', Arial, sans-serif;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 18px;
     text-transform: unset;
     text-align: center;
     vertical-align: middle;
+}
+
+/* Global & Basic (adaptive) */
+
+body {
+  min-width: 320px;
+
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.25em;
+  
+  color: #1f2937;
+  background-color: #f9faf8;
+}
+
+.btn {
+    padding: 5px 5px;
+    min-width: 38px;
+
+    font-family: 'Cuprum', Arial, sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.25em;
 
     border: none;
-    border-radius: 7px;
+    border-radius: 4px;
+}
+
+/* LIQUID GLASS STYLES */
+
+.liquidGlass-wrapper {
+  position: relative;
+  display: flex;
+  font-weight: 600;
+  overflow: hidden;
+
+  color: black;
+  cursor: pointer;
+
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
+
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+}
+
+.liquidGlass-effect {
+  position: absolute;
+  z-index: 0;
+  inset: 0;
+
+  backdrop-filter: blur(3px);
+  filter: url(#glass-distortion);
+  overflow: hidden;
+  isolation: isolate;
+}
+
+.liquidGlass-tint {
+  z-index: 1;
+  position: absolute;
+  inset: 0;
+  background: rgba(255, 255, 255, 0.25);
+}
+
+.liquidGlass-shine {
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+
+  overflow: hidden;
+
+  box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.5),
+    inset -1px -1px 1px 1px rgba(255, 255, 255, 0.5);
+}
+
+.liquidGlass-text {
+  z-index: 3;
+  font-size: 2rem;
+  color: black;
 }
 
 /* Main layout */
+
+body {
+    background-size: cover;
+    background-origin: content-box;
+    background-repeat: no-repeat;
+    background-image: url('../img/background-001.png');
+    background-position: center center;
+}
+
+.main-content-wrap {
+    width: 55vmin;
+    max-height: 90vmin;
+
+    margin: auto;
+}
+
+.main-content {
+    width: 99%;
+    height: 99%;
+
+    margin: auto;
+}
+
+.screen-aria {
+
+}
+
+.keyboard-aria {
+
+}
