--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ body {
   overflow: hidden;
 
   color: black;
-  cursor: pointer;
 
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
 
@@ -181,12 +180,28 @@ body {
     height: 99%;
 
     margin: auto;
+    padding-top: 12px;
+    padding-bottom: 12px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.screen-aria-wrap {
+    width: 95%;
+    height: 16%;
 }
 
 .screen-aria {
+}
 
+.keyboard-aria-wrap {
+    width: 95%;
+    height: 82%;
+    /* border: 1px solid #f0f; */
 }
 
 .keyboard-aria {
-
 }
