feat: Finished keyboard design

--- a/css/style.css
+++ b/css/style.css
@@ -113,45 +113,45 @@ body {
 /* LIQUID GLASS STYLES */
 
 .liquidGlass-wrapper {
-  position: relative;
-  display: flex;
-  font-weight: 600;
-  overflow: hidden;
+    position: relative;
+    display: flex;
+    font-weight: 600;
+    overflow: hidden;
 
-  color: black;
+    color: black;
 
-  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
 
-  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
 }
 
 .liquidGlass-effect {
-  position: absolute;
-  z-index: 0;
-  inset: 0;
+    position: absolute;
+    z-index: 0;
+    inset: 0;
 
-  backdrop-filter: blur(3px);
-  filter: url(#glass-distortion);
-  overflow: hidden;
-  isolation: isolate;
+    backdrop-filter: blur(3px);
+    filter: url(#glass-distortion);
+    overflow: hidden;
+    isolation: isolate;
 }
 
 .liquidGlass-tint {
-  z-index: 1;
-  position: absolute;
-  inset: 0;
-  background: rgba(255, 255, 255, 0.25);
+    z-index: 1;
+    position: absolute;
+    inset: 0;
+    background: rgba(255, 255, 255, 0.25);
 }
 
 .liquidGlass-shine {
-  position: absolute;
-  inset: 0;
-  z-index: 2;
+    position: absolute;
+    inset: 0;
+    z-index: 2;
 
-  overflow: hidden;
+    overflow: hidden;
 
-  box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.5),
-    inset -1px -1px 1px 1px rgba(255, 255, 255, 0.5);
+    box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.5),
+        inset -1px -1px 1px 1px rgba(255, 255, 255, 0.5);
 }
 
 .liquidGlass-text {
@@ -250,8 +250,9 @@ body {
 
 .key {
     font-size: 7vmin;
-    color: #070911;
     border-radius: 10px;
+
+    color: #070911;
 }
 
 .key-wrap:nth-child(-n+4) {
@@ -260,6 +261,26 @@ body {
 
 .key-wrap:nth-child(-n+4) > .key {
     font-size: 4vmin;
+}
+
+.key-wrap:nth-child(-n+7) > .key,
+.key-wrap:nth-child(21) > .key,
+.key-wrap:nth-child(23) > .key {
+    color: #450945;
+    background: rgba(205, 255, 205, 0.25);
+    box-shadow: inset 2px 2px 1px 0 rgba(205, 255, 205, 0.5),
+        inset -1px -1px 1px 1px rgba(205, 255, 205, 0.5);
+}
+
+.key-wrap:nth-child(8) > .key,
+.key-wrap:nth-child(12) > .key,
+.key-wrap:nth-child(16) > .key,
+.key-wrap:nth-child(20) > .key,
+.key-wrap:nth-child(24) > .key {
+    color: #454509;
+    background: rgba(205, 205, 255, 0.25);
+    box-shadow: inset 2px 2px 1px 0 rgba(205, 205, 255, 0.5),
+        inset -1px -1px 1px 1px rgba(205, 205, 255, 0.5);
 }
 
 .key:hover {
@@ -272,15 +293,34 @@ body {
     background: rgba(255, 255, 255, 0.85);
 }
 
-/* .key-wrap:nth-child(-n+7) > .key,
-.key-wrap:nth-child(21) > .key,
-.key-wrap:nth-child(23) > .key {
-    color: rgba(245, 109, 30, 1);
-    background: rgba(128, 204, 204, 0.25);
-}
-
 .key-wrap:nth-child(-n+7) > .key:hover,
 .key-wrap:nth-child(21) > .key:hover,
 .key-wrap:nth-child(23) > .key:hover {
-    background: rgba(128, 204, 204, 0.25);
-} */
+    color: rgba(40, 109, 235, 1);
+    background: rgba(205, 255, 205, 0.5);
+}
+
+.key-wrap:nth-child(-n+7) > .key:active,
+.key-wrap:nth-child(21) > .key:active,
+.key-wrap:nth-child(23) > .key:active {
+    color: rgba(40, 109, 235, 0.65);
+    background: rgba(205, 255, 205, 0.85);
+}
+
+.key-wrap:nth-child(8) > .key:hover,
+.key-wrap:nth-child(12) > .key:hover,
+.key-wrap:nth-child(16) > .key:hover,
+.key-wrap:nth-child(20) > .key:hover,
+.key-wrap:nth-child(24) > .key:hover {
+    color: rgba(30, 175, 89, 1);
+    background: rgba(205, 205, 255, 0.5);
+}
+
+.key-wrap:nth-child(8) > .key:active,
+.key-wrap:nth-child(12) > .key:active,
+.key-wrap:nth-child(16) > .key:active,
+.key-wrap:nth-child(20) > .key:active,
+.key-wrap:nth-child(24) > .key:active {
+    color: rgba(30, 175, 89, 0.65);
+    background: rgba(205, 205, 255, 0.85);
+}
