--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,15 @@ body {
     color: #bbb;
 }
 
+.memory-display {
+    position: absolute;
+    top: 2%;
+    left: 2%;
+
+    font-size: 1.5vmin;
+    color: #384654;
+}
+
 /* Keyboard */
 
 .key-wrap {
